--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemon": "^3.1.10"
   },
   "dependencies": {
+    "@sendgrid/mail": "^8.1.6",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
@@ -30,6 +31,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.0",
-    "multer": "^2.0.2"
+    "multer": "^2.0.2",
+    "twilio": "^5.10.2"
   }
 }
