triageService tested with model by classifying images by url

--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
@@ -31,7 +32,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.19.0",
+    "mongoose": "^8.19.1",
     "multer": "^2.0.2",
     "twilio": "^5.10.2"
   }
