--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -24,6 +24,8 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.6",
+    "@tensorflow/tfjs": "^4.22.0",
+    "@tensorflow/tfjs-node": "^4.22.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
