--- a/BACKEND/.env.example
+++ b/BACKEND/.env.example
@@ -1,11 +1,40 @@
-PORT = 5000
-MONGO_URI = mongodb+srv://shreyanshjain354_db_user:Webster70@cluster0.q1ywy7x.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
-JWT_SECRET="2e0dde70e08ca1155b53e594a453a8a5"
-CLOUDINARY_CLOUD_NAME = "dffrtqlgz"
-CLOUDINARY_API_KEY = "349643561729662"
-CLOUDINARY_API_SECRET = "R4HAKi5AoZjKIdatntLJXVqxOX4"
-GOOGLE_API_KEY = "AIzaSyDmO5Hm6PFwVsWFsPBJ0n0vbGyyszTNFig"
-TWILIO_ACCOUNT_SID = "ACc16c21a7cd091294e7383e79a0310655"
-TWILIO_AUTH_TOKEN = "10a3b92377cab164bb06409ec11265d4"
-TWILIO_PHONE_NUMBER = "+18585445290"
-SENDGRID_API_KEY = "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"
+# Server Configuration
+PORT=5000
+NODE_ENV=development
+FRONTEND_URL=http://localhost:5174
+
+# Database Configuration
+MONGO_URI=mongodb+srv://username:password@cluster.mongodb.net/resolvehub
+
+# Authentication Secrets
+JWT_SECRET=your-jwt-secret-key-here
+SESSION_SECRET=your-session-secret-key-here
+
+# Google OAuth Configuration
+GOOGLE_CLIENT_ID=your-google-client-id-here
+GOOGLE_CLIENT_SECRET=your-google-client-secret-here
+GOOGLE_CALLBACK_URL=http://localhost:5000/api/auth/google/callback
+
+# GitHub OAuth Configuration
+GITHUB_CLIENT_ID=your-github-client-id-here
+GITHUB_CLIENT_SECRET=your-github-client-secret-here
+GITHUB_CALLBACK_URL=http://localhost:5000/api/auth/github/callback
+
+# Cloudinary Configuration (File Storage)
+CLOUDINARY_CLOUD_NAME=your-cloudinary-cloud-name
+CLOUDINARY_API_KEY=your-cloudinary-api-key
+CLOUDINARY_API_SECRET=your-cloudinary-api-secret
+
+# Google Services
+GOOGLE_API_KEY=your-google-maps-api-key
+
+# Email Service (SendGrid)
+SENDGRID_API_KEY=your-sendgrid-api-key
+
+# SMS Service (Twilio)
+TWILIO_ACCOUNT_SID=your-twilio-account-sid
+TWILIO_AUTH_TOKEN=your-twilio-auth-token
+TWILIO_PHONE_NUMBER=your-twilio-phone-number
+
+# Admin Configuration
+ADMIN_EMAIL=admin@yourdomain.com
