--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,5 @@
+# API Configuration
 VITE_API_BASE_URL=http://localhost:5000
-VITE_GOOGLE_MAPS_API_KEY=your_maps_javascript_api_key_here
-VITE_GOOGLE_PLACES_API_KEY=your_places_api_key_here
-VITE_GOOGLE_STATIC_API_KEY=your_static_maps_api_key_here
+
+# Google Maps Configuration
+VITE_GOOGLE_MAPS_API_KEY=your-google-maps-javascript-api-key-here
