feat: add baseline-browser-mapping dependency to frontend
style: update RegisterPage to use global styles instead of jsx styles

chore: implement loadEnv.js for environment variable management in backend

--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,9 @@ jspm_packages/
 .env.test.local
 .env.production.local
 
+# Local backend env file (do not commit)
+BACKEND/env
+
 # parcel-bundler cache
 .cache
 .parcel-cache
