--- a/BACKEND/.env.example
+++ b/BACKEND/.env.example
@@ -28,6 +28,13 @@ CLOUDINARY_API_SECRET=your-cloudinary-api-secret
 # Google Services
 GOOGLE_API_KEY=your-google-maps-api-key
 
+# Geocoding Provider
+# - google: uses GOOGLE_GEOCODING_API_KEY / GOOGLE_API_KEY (may require billing)
+# - nominatim: uses OpenStreetMap Nominatim (no key; not for heavy production traffic)
+GEOCODER_PROVIDER=nominatim
+NOMINATIM_BASE_URL=https://nominatim.openstreetmap.org
+GEOCODER_USER_AGENT=ResolveHub (contact: admin@yourdomain.com)
+
 # Email Service (SendGrid)
 SENDGRID_API_KEY=your-sendgrid-api-key
 
