--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,4 +1,7 @@
 # API Configuration
+# Backend API base URL
+# Local:  http://localhost:5000
+# Prod:   https://resolvehub-7iyr.onrender.com
 VITE_API_BASE_URL=http://localhost:5000
 
 # Google Maps Configuration
